--- a/src/main/webapp/Feuilles de style/profil.css
+++ b/src/main/webapp/Feuilles de style/profil.css
@@ -35,6 +35,13 @@ p {
 	border-color: #CCCCCC;
 }
 
+.retweetButton {
+    background-image: url("../Divers/retweet_icon.png");
+    width: 49px;
+    height: 45px;
+    border: none;
+}
+
 /* Navigation */
 
 #entete {
