--- a/src/main/webapp/Feuilles de style/base.css
+++ b/src/main/webapp/Feuilles de style/base.css
@@ -140,14 +140,14 @@ pre strong {
 	Mais ce retrait de 6px est un peu faiblard: on le renforce donc.
 	Notez bien que les feuilles de styles des gabarits pourront augmenter
 	ce retrait, ou bien l'annuler.
-	
+
 3.	Voici quelques exemples de collections cohérentes de fontes (propriété
 	CSS "font-family"):
 	font-family: Arial, Helvetica, "Nimbus Sans L", sans-serif;
 	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 	font-family: Georgia, "Bitstream Vera Serif", Norasi, serif;
 	font-family: "Times New Roman", Times, "Nimbus Roman No9 L", serif;
-		
+
 4.	Taille du texte de base de la page. Dépend de la taille du texte par
 	défaut du navigateur (souvent 16px), et des réglages de l'utilisateur.
 	À adapter en fonction de la fonte choisie, et du rendu souhaité.
@@ -182,3 +182,15 @@ pre strong {
 	un "border: none" aux images qui se trouvent à l'intérieur d'un lien.
 
 */
+
+
+.buttons {
+    background-color: #FEAA00; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
